Unreviewed, fix libpas build on internal build https://bugs.webkit.org/show_bug.cgi?id=244099

* Source/bmalloc/libpas/src/libpas/pas_fast_tls.h:

Canonical link: https://commits.webkit.org/253568@main